@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.6335 2009/01/17 23:23:08 fsgiudice Exp $
+ * $Id: ChangeLog,v 1.6336 2009/01/17 23:35:24 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2009-01-18 07:00 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
+  * source/vm/hvm.c
+    - my previous revert was not clean. It's clean now.
 
 2009-01-18 06:00 UTC+0700 Andi Jahja <xharbour/AT/telkom/net/id>
   * source/vm/hvm.c
